// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Element /> inserts styles <Element className={...} /> 1`] = `
<div
  className={
    CSSClassJoin [
      "bootstrap"
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element color="red" className={...} /> 1`] = `
<div
  className={
    CSSClassJoin [
      "bootstrap"
    ]
  }
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} /> 1`] = `
<div
  className={null}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`<Element /> inserts styles <Element color={...} hover={...} /> 1`] = `
<div
  className={
    CSSClassJoin [
      CSSClass base:hover {
        color: red !important
      }
    ]
  }
  style={
    Object {
      "color": "black",
    }
  }
/>
`;

exports[`<Element /> inserts styles <Element focus={...} hover={...} /> 1`] = `
<div
  className={
    CSSClassJoin [
      CSSClass base:focus {
        color: black !important
      }
      CSSClass base:hover {
        color: red !important
      }
    ]
  }
/>
`;

exports[`<Element /> inserts styles <Element hover={...} /> 1`] = `
<div
  className={
    CSSClassJoin [
      CSSClass base:hover {
        color: red !important
      }
    ]
  }
/>
`;
